Fix Homepage options on IE and Edge

--- a/src/components/GetHelpOpts/GetHelpOpts.css
+++ b/src/components/GetHelpOpts/GetHelpOpts.css
@@ -1,11 +1,9 @@
 @media only screen and (min-width: 1200px) {
     .bigHolder {
-        background-color: green;
         height: 100%;
         width: 100%;
     }
     .help {
-        background-color: blue;
         display: flex;
         display: -webkit-flex;
         display: -ms-flexbox;
@@ -21,7 +19,7 @@
         padding: 0;
         text-align: center;
         margin-bottom: 55px;
-        margin-top: 55px;
+        margin-top: 15px;
     }
     .title {
         display: flex;
