--- a/src/components/LatestPosts/index.css
+++ b/src/components/LatestPosts/index.css
@@ -2,6 +2,7 @@
     .latestPosts {
         text-align: center;
         width: 100%;
+        height: 10%;
     }
 
 
@@ -11,6 +12,7 @@
     .latestPosts {
         text-align: center;
         width: 100%;
+        height: 10%;
     }
 }
 
@@ -18,6 +20,7 @@
     .latestPosts {
         text-align: center;
         width: 100%;
+        height: 10%;
     }
 }
 
@@ -25,6 +28,7 @@
     .latestPosts {
         text-align: center;
         width: 100%;
+        height: 10%;
     }
 
 }
@@ -33,7 +37,6 @@
     .latestPosts {
         text-align: center;
         width: 100%;
-        height: 100%;
-        background-color: red;
+        height: 10%;
     }
 }
